<resources>
    <!--imc app-->
    <string name="app_name">ExerciseAndroid</string>
    <string name="card_male">Male</string>
    <string name="card_female">Female</string>
    <string name="card_height">Height</string>
    <string name="card_weight">Weight</string>
    <string name="card_age">Age</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_recalculate">Re-Calculate</string>
    <string name="result">Your Result</string>

    <string name="error">Error</string>

    <string name="title_low_weight">Low Weight</string>
    <string name="desc_low_weight">This can be indicative of insufficient nutrition or underlying health conditions.</string>

    <string name="title_normal_weight">Normal Weight</string>
    <string name="desc_normal_weight">Maintaining a normal weight contributes to optimal physical and mental health.</string>

    <string name="title_overweight">Overweight</string>
    <string name="desc_overweight">This can be a result of excess body fat, often linked to lifestyle factors such as diet and exercise.</string>

    <string name="title_obesity">Obesity</string>
    <string name="desc_obesity">This condition poses serious health risks, such as heart disease, diabetes, and joint problems.</string>

    <!--todo app-->

    <string name="todo_title">Welcome</string>
    <string name="todo_categories">Categories</string>
    <string name="todo_tasks">Tasks</string>
    <string name="todo_text_hint">Add task</string>
    <string name="todo_text_button_create">Create Task</string>
    <string name="todo_radio_button_text_business">Business</string>
    <string name="todo_radio_button_text_personal">Personal</string>
    <string name="todo_radio_button_text_others">Others</string>

<!--    superhero app-->

    <string name="superhero_stat_intelligence">intelligence</string>
    <string name="superhero_stat_strength">strength</string>
    <string name="superhero_stat_speed">speed</string>
    <string name="superhero_stat_durability">durability</string>
    <string name="superhero_stat_power">power</string>
    <string name="superhero_stat_combat">combat</string>
</resources>